fix: fixed tailwind config error and wrong font face css

--- a/client/src/common/styles/global.css
+++ b/client/src/common/styles/global.css
@@ -2,11 +2,22 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+    font-family: 'Avenir';
+    src: local('Avenir Roman'), local('Avenir-Roman'),
+    url('/public/fonts/Avenir-Roman.woff2') format('woff2'),
+    url('/public/fonts/Avenir-Roman.woff') format('woff'),
+    url('/public/fonts/Avenir-Roman.ttf') format('truetype');
+    font-weight: 400;
+    font-style: normal;
+}
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
+
 
 body {
     font-family: 'Jost', 'sans-serif';
